fix liquid management